<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tablePasienList"
            android:layout_marginTop="100dp"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

                <LinearLayout android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/labelTanggal"
                        android:layout_marginLeft="30dp"
                        android:textSize="@dimen/label_size"
                        android:layout_gravity="center_vertical"
                        android:text="Date"/>
                    <Space
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:layout_toEndOf="@+id/labelTanggal"
                        android:id="@+id/edTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical"
                        android:hint="" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/calender"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="0dp"
                    android:onClick="setDate"
                    android:src="@drawable/ic_calender" />

            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
            <TableRow>
                <LinearLayout android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/labelKabupaten"
                        android:textSize="@dimen/label_size"
                        android:layout_marginLeft="30dp"
                        android:layout_gravity="center_vertical"
                        android:text="Kabupaten"/>
                    <Space
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:layout_toEndOf="@+id/labelKabupaten"
                        android:id="@+id/spinnerKabupaten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical"
                        android:prompt="@string/kabupaten_prompt"
                        />
                </LinearLayout>
            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
            <TableRow>
                <LinearLayout android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/labelKecamatan"
                        android:textSize="@dimen/label_size"
                        android:layout_marginLeft="30dp"
                        android:layout_gravity="center_vertical"
                        android:text="Kecamatan"/>
                    <Space
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:layout_toEndOf="@+id/labelKecamatan"
                        android:id="@+id/spinnerKecamatan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical"
                        android:prompt="@string/kecamatan_prompt"
                        />
                </LinearLayout>
            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
            <TableRow>
                <LinearLayout android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/labelDesa"
                        android:textSize="@dimen/label_size"
                        android:layout_marginLeft="30dp"
                        android:layout_gravity="center_vertical"
                        android:text="Desa"/>
                    <Space
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:layout_toEndOf="@+id/labelDesa"
                        android:id="@+id/spinnerDesa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical"
                        android:prompt="@string/desa_prompt"
                        />
                </LinearLayout>
            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
            <TableRow>
                <LinearLayout android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/labelDusun"
                        android:textSize="@dimen/label_size"
                        android:layout_marginLeft="30dp"
                        android:layout_gravity="center_vertical"
                        android:text="Dusun"/>
                    <Space
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:layout_toEndOf="@+id/labelDusun"
                        android:id="@+id/spinnerDusun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical"
                        android:prompt="@string/dusun_prompt"
                        />
                </LinearLayout>
            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
            <TableRow>
                <LinearLayout android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/labelPuskesmas"
                        android:textSize="@dimen/label_size"
                        android:layout_marginLeft="30dp"
                        android:layout_gravity="center_vertical"
                        android:text="Puskesmas"/>
                    <Space
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:layout_toEndOf="@+id/labelPuskesmas"
                        android:id="@+id/spinnerPuskesmas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical"
                        android:prompt="@string/puskesmas_prompt" />
                </LinearLayout>
            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>
        </TableLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_pasien"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/tablePasienList"
            android:visibility="gone"
            tools:listitem="@layout/list_row_pasien"></android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/text_no_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Data is empty"
            android:textColor="@color/md_red_400"
            android:textSize="14dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:layout_below="@+id/recycler_view_pasien"
            android:src="@android:drawable/ic_input_add"
            android:tint="@color/white"
            app:backgroundTint="@color/bgSpinner" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>